--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-homework-template",
   "version": "0.1.0",
   "private": true,
-  "homepage": " https://ancorframe.github.io/goit-react-hw-08-phonebook/",
+  "homepage": " https://ancorframe.github.io/react-ASU/",
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
