--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "formik": "^2.2.9",
+    "framer-motion": "^7.6.12",
     "nanoid": "^4.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
