--- a/package.json
+++ b/package.json
@@ -4,6 +4,12 @@
   "private": true,
   "homepage": " https://ancorframe.github.io/react-ASU/",
   "dependencies": {
+    "@editorjs/editorjs": "^2.26.4",
+    "@editorjs/embed": "^2.5.3",
+    "@editorjs/header": "^2.7.0",
+    "@editorjs/list": "^1.8.0",
+    "@editorjs/nested-list": "^1.3.0",
+    "@editorjs/paragraph": "^2.9.0",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.10.9",
@@ -13,6 +19,7 @@
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "codex-tooltip": "^1.0.5",
     "formik": "^2.2.9",
     "framer-motion": "^7.6.12",
     "nanoid": "^4.0.0",
@@ -59,5 +66,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@editorjs/checklist": "^1.4.0",
+    "@editorjs/image": "^2.8.1",
+    "@editorjs/link": "^2.5.0",
+    "@editorjs/quote": "^2.5.0",
+    "@editorjs/raw": "^2.4.0",
+    "@editorjs/simple-image": "^1.5.1"
   }
 }
