--- a/package.json
+++ b/package.json
@@ -6,19 +6,16 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@hookform/error-message": "^2.0.1",
+    "@hookform/resolvers": "^3.1.0",
     "@mui/icons-material": "^5.10.9",
-    "@mui/material": "^5.10.12",
-    "@mui/styled-engine-sc": "^5.10.6",
-    "@tanstack/query-sync-storage-persister": "^4.29.5",
     "@tanstack/react-query": "^4.29.5",
-    "@tanstack/react-query-persist-client": "^4.29.5",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "codex-tooltip": "^1.0.5",
     "debounce": "^1.2.1",
-    "dompurify": "^3.0.2",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
     "framer-motion": "^7.6.12",
@@ -34,7 +31,6 @@
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.41.0",
     "react-icons": "^4.6.0",
-    "react-loader-spinner": "^5.3.4",
     "react-loading-skeleton": "^3.3.1",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
